/* Copyright 2020 Energinet DataHub A/S
 *
 * Licensed under the Apache License, Version 2.0 (the "License2");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

option csharp_namespace = "Energinet.DataHub.MarketParticipant.Integration.Model.Protobuf";
import "google/protobuf/timestamp.proto";

// Currently unused.
message MarketRoleAddedToActorIntegrationEventContract {
    string Id = 1;
    string ActorId = 2;
    string OrganizationId = 3;
    google.protobuf.Timestamp EventCreated = 4;
    int32 MarketRoleFunction = 5;
    int32 BusinessRole = 6;
    string Type = 7;
}